butonul de reset

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+
+    <section>
+
     <div>
         <button class="primul-tab">Tab 1</button>
     </div>
@@ -37,6 +40,16 @@
         <p class="al-treilea-paragraf"> 3 Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Animi reiciendis ipsam neque aliquid accusamus repudiandae quam dignissimos magnam fugit dolorem.</p>    
     </div>
+
+</section>
+
+<section>
+
+    <div>
+        <button class="reset-button">Reset</button>
+    </div>
+
+</section>
     
     <script src="./script.js"></script>
 </body>
